Bug 395948 - Juk tag editor doesn't work
Summary: Juk tag editor doesn't work
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.04.1
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-28 07:43 UTC by Michael D
Modified: 2018-07-06 20:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2018-06-28 07:43:37 UTC
When I right-click on a file and select "Edit '<song name>'", nothing happens. I haven't tested, but perhaps the tag guessing feature also doesn't work.
Comment 1 Michael D 2018-06-28 07:45:03 UTC
I should've tested first, but anyway, the tag guessing feature does seem to work, so it's just the tag editing feature.
Comment 2 Michael Pyne 2018-07-04 23:33:01 UTC
Git commit 117646dd6232b0843ebce081ec6c591899516f16 by Michael Pyne.
Committed on 04/07/2018 at 23:28.
Pushed by mpyne into branch 'master'.

Bring back inline tag editing.

This was a KDE 4 JuK feature that had been left disabled in the port to
Plasma 5/KF5. I finished the implementation here in response to a user
request.

Given the code changes it's technically best described as a new feature
(even if it used to work in KDE 4) so it probably won't show up until
the next release of KDE Applications, though it should be safe to
backport for interested distributions.

GUI:
FIXED-IN:18.08

M  +33   -74   playlist.cpp
M  +1    -10   playlist.h
M  +2    -2    playlistitem.cpp

https://commits.kde.org/juk/117646dd6232b0843ebce081ec6c591899516f16
Comment 3 Michael D 2018-07-06 20:46:08 UTC
Thank you for reimplementing this incredibly useful feature!